adding contact part

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <h1>Hi, i'm Setare.</h1>
 
             <p class="main-text">
-              A software engineer with an emphasis on web development. I build
-              the front-end and back-end of websites as a Fullstack Web
-              Developer, which contributes to the success of the final product.
+              A software engineer with an emphasis on web development. As a Fullstack Web
+              Developer I build
+              the front-end and back-end of websites, which contributes to the success of the final product.
               <!-- No matter how little or huge the product is, I always make sure that anything I'm doing is going to solve problems and provide value. -->
             </p>
           </div>
@@ -214,6 +214,39 @@
             </p>
             <a href="">lorem</a>
           </div>
+        </div>
+      </div>
+    </div>
+    <!-- contact -->
+    <div class="container ">
+      <div id="contact" class="row main-contact">
+        <div class="col-md-6 col-sm-12">
+<form action="">
+  <label for="name">Name</label>
+  <input type="text" id="name">
+  <label for="email">Email</label>
+  <input type="text" id="email">
+  <label for="message">Message</label>
+  <textarea name="message" id="message" cols="30" rows="10"></textarea>
+  <button type="submit">SUBMIT</button>
+</form>
+        </div>
+        <div class="col-md-6 col-sm-12 ">
+          <div class="connect">
+            <h2>Connect</h2>
+            <p class="my-mail">setazarm@gmail.com</p>
+            <p class="my-phone">+491632345584</p>
+            <h2>Follow me</h2>
+            <div class="follow-me">
+              <a href="https://www.linkedin.com/in/setareh-azarmsa/"
+              ><i class="fa-brands fa-linkedin-in"></i
+                      ></a>
+              
+              <a href="https://www.linkedin.com/in/setareh-azarmsa/"><i class="fa-brands fa-github-alt"></i></a>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </div>
