adding some text

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <script
@@ -34,6 +34,7 @@
   </head>
   <body>
     <!-- navbar -->
+    <div class="main-page">
     <nav id="home">
       <div class="logo">
         <p>SetareAzarmsa</p>
@@ -58,13 +59,12 @@
       <a href="https://www.linkedin.com/in/setareh-azarmsa/"
         ><i class="fa-brands fa-linkedin-in"></i
       ></a>
-      <i class="fa-brands fa-github-alt"></i>
-      <a href="https://www.linkedin.com/in/setareh-azarmsa/"
-        ><i class="fa-brands fa-linkedin-in"></i
-      ></a>
-      <a href="https://github.com/setazarm"
-        ><i class="fa-brands fa-github-alt"></i
-      ></a>
+      <a href="https://github.com/setazarm">
+        <i class="fa-brands fa-github-alt"></i>
+      </a>
+    
+      <!-- <a href=""><i class="fa-brands fa-instagram"></i></a>
+      <a href=""><i class="fa-brands fa-facebook"></i></a> -->
     </aside>
     <!-- end of aside -->
     <!-- intro -->
@@ -74,12 +74,14 @@
           class="col-8 text-align-center justify-content-center align-items-center"
         >
           <div class="intro">
-            <h1>Hi, i'm Setare.</h1>
+            <h1>HI,i am setare</h1>
 
             <p class="main-text">
-              A software engineer with an emphasis on web development. As a Fullstack Web
+              A software engineer with an emphasis on web development. 
+              As a Fullstack Web
               Developer I build
-              the front-end and back-end of websites, which contributes to the success of the final product.
+              the front-end and back-end of websites, which contributes to the success of the final product
+             <a href="#about">see more about me.</a>
               <!-- No matter how little or huge the product is, I always make sure that anything I'm doing is going to solve problems and provide value. -->
             </p>
           </div>
@@ -96,7 +98,7 @@
           <section>
             <div class="project">
               <a href="#my-projects">
-                <h2>Here find some of my projects</h2>
+                <h2>View Projects</h2>
               </a>
             </div>
             <!-- <div class="project">
@@ -121,21 +123,23 @@
           class="col-md-5 col-sm-12 text-align-center justify-content-center align-items-center"
         >
           <section class="skills">
-            <h2>My Skills</h2>
+            <h2>My Skills :</h2>
 
             <div>HTML</div>
             <div>CSS</div>
             <div>Bootstrap</div>
             <div>Sass</div>
             <div>Figma</div>
-            <div>Git</div>
             <div>Github</div>
+            <div>Git</div>
             <div>Responsive Design</div>
+            
           </section>
         </div>
       </div>
 
       <!-- Project -->
+    </div>
     </div>
     <!-- About -->
     <div id="about" class="contatiner about">
@@ -144,12 +148,9 @@
           <div class="about-text">
             <h2>Hi,I am Setare</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Exercitationem, laborum at! Voluptatum assumenda autem dolores ad
-              neque nihil totam soluta nobis porro est hic, enim fuga excepturi
-              ipsum tempora perferendis quae doloremque perspiciatis magni
-              voluptatibus error. Inventore quaerat nostrum mollitia voluptates
-              unde sunt nihil eos minima, similique enim tenetur reprehenderit!
+              I am a full-stack web developer based in Berlin with a bachelor's degree in software engineering.
+              I recently completed a one-year web development course at the Digital Career Institute (DCI), and I'm seeking for career opportunities where I can grow professionally.
+              if I'm not coding you can find me painting, reading, or hanging out with my friends .
             </p>
           </div>
         </div>
@@ -209,9 +210,7 @@
           <div class="my projects-text">
             <h3>Lorem, ipsum.</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
-              quo.
-            </p>
+             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non corporis id minus quae ut beatae eaque saepe facere molestiae nemo?
             <a href="">lorem</a>
           </div>
         </div>
@@ -255,6 +254,7 @@
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
+      <a href="#projects">Projects</a>
     </footer>
 
     <!-- JavaScript Bundle with Popper -->
@@ -264,4 +264,4 @@
       crossorigin="anonymous"
     ></script>
   </body>
-</html>
+</html> -->
