befor using sass

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
               Developer I build
               the front-end and back-end of websites, which contributes to the success of the final product
              <a href="#about">see more about me.</a>
-              <!-- No matter how little or huge the product is, I always make sure that anything I'm doing is going to solve problems and provide value. -->
             </p>
           </div>
         </div>
@@ -150,6 +149,7 @@
             <p>
               I am a full-stack web developer based in Berlin with a bachelor's degree in software engineering.
               I recently completed a one-year web development course at the Digital Career Institute (DCI), and I'm seeking for career opportunities where I can grow professionally.
+              No matter how little or huge the product is, I always make sure that anything I'm doing is going to solve problems and provide value.
               if I'm not coding you can find me painting, reading, or hanging out with my friends .
             </p>
           </div>
