--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </aside>
     <!-- end of aside -->
     <!-- intro -->
-    <div class="container sec-full">
+    <div class="container l">
       <div class="row">
         <div
           class="col-8 text-align-center justify-content-center align-items-center"
@@ -78,7 +78,7 @@
 
             <p class="main-text">
               A software engineer with an emphasis on web development. 
-              As a Fullstack Web
+              As a Full-stack Web
               Developer I build
               the front-end and back-end of websites, which contributes to the success of the final product
              <a href="#about">see more about me.</a>
@@ -141,9 +141,9 @@
     </div>
     </div>
     <!-- About -->
-    <div id="about" class="contatiner about">
+    <div id="about" class="contatiner about ">
       <div class="row">
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-sm-12 mx-5">
           <div class="about-text">
             <h2>Hi,I am Setare</h2>
             <p>
