--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-8 text-align-center justify-content-center align-items-center"
+            class="col-md-8 col-sm-12 text-align-center"
           >
             <div class="intro">
               <h1>HI,i am setare</h1>
@@ -97,14 +97,13 @@
           <div
             class="col-md-6 col-sm-12 text-align-center justify-content-center align-items-center"
           >
-            <section>
+           
               <div class="project">
                 <a href="#my-projects">
                   <h2>View Projects</h2>
                 </a>
               </div>
           
-            </section>
           </div>
           <!-- end of project button -->
 
@@ -135,11 +134,11 @@
     <!-- About -->
     <div id="about" class="contatiner about">
       <div class="row">
-        <div class="col-md-6 col-sm-12 mx-3 my-1 ">
+        <div class="col-lg-6 col-md-12 mx-3-md my-1-md ">
           <div class="about-text">
-            <h2>Hi,I am Setare</h2>
+            <h2>Hi, I am Setare</h2>
             <p>
-              Hi, I am Setare
+  
               I am a full-stack web developer based in Berlin with a bachelor's degree in software engineering. 
               After completing a year-long web development program at the Digital Career Institute (DCI), I'm now seeking career opportunities where I can grow professionally.
             </p>
@@ -152,7 +151,7 @@
                 </p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12 order-lg-last order-sm-first mx-5 my-5">
+        <div class="col-md-4 col-sm-12 order-lg-last order-sm-first mx-5-md my-5-md">
           <img src="/pic.jpeg" alt="" />
         </div>
       </div>
@@ -164,14 +163,14 @@
 
     <div id="my-projects" class="container my-5 my-projects">
       <div class="my-projects-title">
-        <h2>My learning Projects</h2>
-        <p>Here you will find some of my exercises on my Github acount.</p>
+        <h2>My Projects</h2>
+        <p>Here you will find some of my projects on my Github acount.</p>
       </div>
       <div class="row border end">
-        <div class="col-md-5 col-sm-12 mx-5 my-5">
+        <div class="col-md-5 col-sm-12 mx-5-md my-5">
           <img src="Doughnuts.png" alt="" />
         </div>
-        <div class="col-md-5 col-sm-12 my-5 mx-5">
+        <div class="col-md-5 col-sm-12 my-5 mx-5-md">
           <div class="my-projects-text">
             <h3>Lorem, ipsum.</h3>
             <p>
@@ -184,10 +183,10 @@
       </div>
 
       <div class="row border end">
-        <div class="col-md-5 col-sm-12 mx-5 my-5">
+        <div class="col-md-5 col-sm-12 mx-5-md my-5">
           <img src="Doughnuts.png" alt="" />
         </div>
-        <div class="col-md-5 col-sm-12 my-5 mx-5">
+        <div class="col-md-5 col-sm-12 my-5 mx-5-md">
           <div class="my-projects-text">
             <h3>Lorem, ipsum.</h3>
             <p>
@@ -201,10 +200,10 @@
       </div>
 
       <div class="row">
-        <div class="col-md-5 col-sm-12 mx-5 my-5">
+        <div class="col-md-5 col-sm-12 mx-5-md my-5">
           <img src="Doughnuts.png" alt="" />
         </div>
-        <div class="col-md-5 col-sm-12 my-5 mx-5">
+        <div class="col-md-5 col-sm-12 my-5 mx-5-md">
           <div class="my-projects-text">
             <h3>Lorem, ipsum.</h3>
             <p>
