--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- About -->
     <div id="about" class="contatiner about">
       <div class="row">
-        <div class="col-lg-6 col-md-12 mx-3-md my-1-md ">
+        <div class="col-lg-6 col-md-12 my-md-1">
           <div class="about-text">
             <h2>Hi, I am Setare</h2>
             <p>
@@ -151,7 +151,7 @@
                 </p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12 order-lg-last order-sm-first mx-5-md my-5-md">
+        <div class="col-md-6 col-sm-12 my-md-5 order-sm-first order-md-first order-lg-2">
           <img src="/pic.jpeg" alt="" />
         </div>
       </div>
@@ -166,7 +166,7 @@
         <h2>My Projects</h2>
         <p>Here you will find some of my projects on my Github acount.</p>
       </div>
-      <div class="row border end">
+      <div class="row border-bottom border-top">
         <div class="col-md-5 col-sm-12 mx-5-md my-5">
           <img src="Doughnuts.png" alt="" />
         </div>
@@ -182,7 +182,7 @@
         </div>
       </div>
 
-      <div class="row border end">
+      <div class="row border-bottom">
         <div class="col-md-5 col-sm-12 mx-5-md my-5">
           <img src="Doughnuts.png" alt="" />
         </div>
